--- a/letscountit-api/values.yaml
+++ b/letscountit-api/values.yaml
@@ -44,9 +44,10 @@ service:
   port: 8000
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
+  enabled: true
+  className: "nginx"
+  annotations:
+    cert-manager.io/cluster-issuer: cloudflare-issuer
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
