--- a/letscountit-api/values.yaml
+++ b/letscountit-api/values.yaml
@@ -48,6 +48,7 @@ ingress:
   className: "nginx"
   annotations:
     cert-manager.io/cluster-issuer: cloudflare-issuer
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
