--- a/letscountit-api/values.yaml
+++ b/letscountit-api/values.yaml
@@ -17,7 +17,7 @@ env:
         name: edgedb-password
         key: password
   - name: EDGEDB_DSN
-    value: "edgedb://edgedb:$(EDGEDB_SERVER_PASSWORD)@letscountit-edgedb-edgedb.letscountit-edgedb:5656/letscountit"
+    value: "edgedb://edgedb:$(EDGEDB_SERVER_PASSWORD)@letscountit-edgedb-edgedb.letscountit-edgedb:5656/main"
 
 bitwarden:
   secrets: 
